# QuackEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  QuackEngine.cpp  README.md  render_settings.json  vcpkg.json
QuackEngine/: CMakeLists.txt  QuackEngine.cpp  QuackEngine.h
Source/: EngineConsole.cpp  UI.cpp
SourceCode/: EngineConsole.cpp  EngineConsole.h  JSONParser.cpp  JSONParser.h  PopUPWindow.cpp  PopUpWindow.h  QuackEngine.cpp  UI.cpp  UI.h
SourceCode/3DMesh/: AssimpModelLoader.cpp  Mesh.h
